// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Card renders correctly 1`] = `
<jest>
  <div
    class="card w-25"
  >
    <img
      alt="alt img"
      class="card-img-top"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-header"
    >
      Header of card
    </div>
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Title card
      </h5>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <button
        class="btn btn-primary"
      >
        Custom action
      </button>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </div>
</jest>
`;

exports[`OE - Card renders horizontal correctly 1`] = `
<jest>
  <div
    class="card w-50"
  >
    <div
      class="row g-0"
    >
      <div
        class="col-4"
      >
        <img
          alt="alt img"
          class="card-img-top"
          src="https://picsum.photos/seed/1019/400/600"
        />
      </div>
      <div
        class="col-8"
      >
        <div
          class="card-body"
        >
          <h5
            class="card-title"
          >
            Title card
          </h5>
          <h6
            class="card-subtitle mb-2"
          >
            Subtitle card
          </h6>
          <p
            class="card-text mb-2"
          >
            Text card with longer text which is supported
          </p>
          <button
            class="btn btn-primary"
          >
            Custom action
          </button>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Card renders with border variant correctly 1`] = `
<jest>
  <div
    class="card border-danger w-25"
  >
    <img
      alt="alt img"
      class="card-img-top"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-header"
    >
      Header of card
    </div>
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Title card
      </h5>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <button
        class="btn btn-primary"
      >
        Custom action
      </button>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </div>
</jest>
`;

exports[`OE - Card renders with image bottom correctly 1`] = `
<jest>
  <div
    class="card w-25"
  >
    <div
      class="card-header"
    >
      Header of card
    </div>
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Title card
      </h5>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <button
        class="btn btn-primary"
      >
        Custom action
      </button>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
    <img
      alt="alt img"
      class="card-img-bottom"
      src="https://picsum.photos/seed/1002/600/400"
    />
  </div>
</jest>
`;

exports[`OE - Card renders with text color white correctly 1`] = `
<jest>
  <div
    class="card text-white w-25"
  >
    <img
      alt="alt img"
      class="card-img-top"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-header"
    >
      Header of card
    </div>
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Title card
      </h5>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <button
        class="btn btn-primary"
      >
        Custom action
      </button>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </div>
</jest>
`;

exports[`OE - Card renders with variant correctly 1`] = `
<jest>
  <div
    class="card bg-danger text-white w-25"
  >
    <img
      alt="alt img"
      class="card-img-top"
      src="https://picsum.photos/seed/1002/600/400"
    />
    <div
      class="card-header"
    >
      Header of card
    </div>
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Title card
      </h5>
      <h6
        class="card-subtitle mb-2"
      >
        Subtitle card
      </h6>
      <p
        class="card-text mb-2"
      >
        Text card with longer text which is supported
      </p>
      <button
        class="btn btn-primary"
      >
        Custom action
      </button>
    </div>
    <div
      class="card-footer"
    >
      Footer of card
    </div>
  </div>
</jest>
`;
